function createTableData is now used to add data cells to table to make code more readable #2

--- a/default.css
+++ b/default.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  background: linear-gradient(#111, #eee);
+  background: linear-gradient(#111, #fff);
   background-repeat: no-repeat;
 }
 
