--- a/default.css
+++ b/default.css
@@ -9,16 +9,16 @@ body {
 
 a {
   cursor: pointer;
-  color: #fff;
+  color: #111;
 }
 
 a:hover {
-  color: #ddd;
+  color: #111;
   text-decoration: none;
 }
 
 #background {
-  background-image: url('hockeybg.jpg');
+  background-image: url('hockeybg.png');
   background-size: cover;
 }
 
@@ -27,11 +27,12 @@ a:hover {
 }
 
 .division {
-  background-color: rgba(0,0,0,.6);
+  background-color: rgba(200,200,200,.4);
   border-radius: 5px;
   padding: 1px 10px 5px 10px;
   margin: 20px 5px;
-  color: #ccc;
+  color: #111;
+  border: 1px solid #333;
 }
 
 th {
@@ -46,4 +47,8 @@ th {
   .container {
     width: 1270px;
   }
+}
+
+td {
+  border-color: #333 !important;
 }
