--- a/default.css
+++ b/default.css
@@ -20,10 +20,7 @@ a:hover {
 #background {
   background-image: url('hockeybg.png');
   background-size: cover;
-}
-
-#rankings {
-
+  border-bottom: 1px solid #fff;
 }
 
 .division {
@@ -51,4 +48,10 @@ th {
 
 td {
   border-color: #333 !important;
+}
+
+#teamProfile {
+  margin-bottom: 30px;
+  border: 1px solid #333;
+  background-color: rgba(255,255,255,1);
 }
