--- a/default.css
+++ b/default.css
@@ -51,7 +51,6 @@ td {
 }
 
 #teamProfile {
+  margin-top: 30px;
   margin-bottom: 30px;
-  border: 1px solid #333;
-  background-color: rgba(255,255,255,1);
 }
