removed link from team name and applied it to entire row, also switched tables class to table-hover to hint to user that you can click anywhere on the row #1 #2

--- a/default.css
+++ b/default.css
@@ -7,14 +7,8 @@ body {
   background-repeat: no-repeat;
 }
 
-a {
+tr:hover {
   cursor: pointer;
-  color: #111;
-}
-
-a:hover {
-  color: #111;
-  text-decoration: none;
 }
 
 #background {
