--- a/default.css
+++ b/default.css
@@ -23,6 +23,7 @@ tr:hover {
   padding: 1px 10px 5px 10px;
   margin: 20px 5px;
   color: #111;
+  font-size: 16px;
 }
 
 th {
@@ -61,6 +62,11 @@ td {
 }
 
 .table-hover > tbody > tr:hover {
-  background-color: #999;
+  background-color: transparent;
   color: #fff;
+  text-shadow:
+    -1px -1px 1px #000,
+    1px -1px 1px #000,
+    -1px 1px 1px #000,
+    1px 1px 1px #000;  
 }
