added team logos for each team next to their name #1

--- a/default.css
+++ b/default.css
@@ -18,12 +18,20 @@ tr:hover {
 }
 
 .division {
-  background-color: rgba(200,200,200,.4);
+  background-color: rgba(255,255,255,.5);
   border-radius: 5px;
   padding: 1px 10px 5px 10px;
-  margin: 20px 5px;
+  margin: 10px 0;
   color: #111;
-  font-size: 16px;
+}
+
+.logo {
+  min-width: 30px;
+  margin-right: 5px;
+}
+
+.division img {
+  width: 10%;
 }
 
 th {
@@ -39,7 +47,8 @@ th {
 }
 
 .h3 {
-  color: #fff;
+  color: #111;
+  margin: 10px 5px 5px 5px;
 }
 
 @media (min-width: 1300px) {
@@ -49,7 +58,7 @@ th {
 }
 
 td {
-  border-color: #333 !important;
+  border-color: #666 !important;
 }
 
 #teamProfile {
